2003-02-08  Jacob Perkins  <jap1@users.sourceforge.net>

	* pixmaps/Makefile.am: Only install pixmaps to $(data_dir)/pixmaps
	* seahorse-widget: Set window icon to seahorse.png
	* seahorse-key-manager: Change path for seahorse.png in about dialog,
	add ::selection_changed to desensitize key options if none selected
	* src/seahorse-file-manager.glade2:
	* src/seahorse-key-manager.glade2:
	* src/seahorse-key-properties.glade2:
	* src/seahorse-text-editor.glade2:
	* src/dialogs/seahorse-add-subkey.glade2:
	* src/dialogs/seahorse-add-uid.glade2:
	* src/dialogs/seahorse-export.glade2:
	* src/dialogs/seahorse-generate.glade2:
	* src/dialogs/seahorse-import.glade2:
	* src/dialogs/seahorse-preferences.glade2:
	* src/dialogs/seahorse-recipients.glade2:
	* src/dialogs/seahorse-revoke.glade2:
	* src/dialogs/seahorse-signatures.glade2:
	Removed window icon since seahorse-widget is doing it

2003-02-07  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-export: OK button initially not sensitive: fixes bug #105301
	* seahorse-passphrase: Fixups borrowed from GPA

2003-02-05  Andras Timar  <timar@gnome.hu>

	* configure.in: Added hu (Hungarian) to ALL_LINGUAS.

2003-02-02  Jacob Perkins  <jap1@users.sourceforge.net>
	
	* seahorse-key: Added ::get_validity, ::get_trust
	* seahorse-validity: Added SeahorseValidity, removed all functions
	except ::get_string, added ::compare
	* seahorse-encrypt-recipients-store:
	* seahorse-key-manager-store:
	Updated for new SeahorseValidity, uses seahorse_validity_compare for sorting
	* seahorse-ops-key:
	* seahorse-key-properties:
	Updated for new SeahorseValidity
	* seahorse.desktop.in: Updated with StartupNotify & X-GNOME settings

2003-02-01  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-properties: Cleanup, string updates, added tooltips
	* seahorse-ops-key: State minimization for ::set_trust, ::del_subkey,
	::add_subkey
	* seahorse-generate:
	* seahorse-import:
	* seahorse-export:
	* seahorse-text-editor:
	String updates