@@ -418,7 +418,7 @@ which the application is designed. -->
 					<glossterm baseform="verify" linkend="op-verify">verification</glossterm> failed.</para>
 					<note>You must have the signing &key; in your <glossterm linkend="key-ring">key ring</glossterm>
 					in order to successfully <glossterm linkend="op-verify">verify</glossterm>
-					a <glossterm linkend="signature">signature</glossterm>.</note>
+					a <glossterm>signature</glossterm>.</note>
 				</listitem>
 			</varlistentry>
 			<varlistentry>
