@@ -62,7 +62,7 @@
 			  <signal name="activate" handler="delete_activate" last_modification_time="Sun, 20 Oct 2002 17:33:05 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image447">
+			    <widget class="GtkImage" id="image455">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-delete</property>
 			      <property name="icon_size">1</property>
@@ -110,7 +110,7 @@
 			  <signal name="activate" handler="change_passphrase_activate" last_modification_time="Wed, 18 Dec 2002 15:00:09 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image448">
+			    <widget class="GtkImage" id="image456">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-copy</property>
 			      <property name="icon_size">1</property>
@@ -138,7 +138,7 @@
 			  <signal name="activate" handler="add_uid_activate" last_modification_time="Sun, 19 Jan 2003 21:31:50 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image449">
+			    <widget class="GtkImage" id="image457">
 			      <property name="visible">True</property>
 			      <property name="stock">gnome-stock-text-indent</property>
 			      <property name="icon_size">1</property>
@@ -160,7 +160,7 @@
 			  <signal name="activate" handler="add_subkey_activate" last_modification_time="Thu, 30 Jan 2003 02:22:45 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image450">
+			    <widget class="GtkImage" id="image458">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-add</property>
 			      <property name="icon_size">1</property>
@@ -214,7 +214,7 @@
 		      </child>
 
 		      <child>
-			<widget class="GtkCheckMenuItem" id="subkeys1">
+			<widget class="GtkCheckMenuItem" id="view_subkeys">
 			  <property name="visible">True</property>
 			  <property name="tooltip" translatable="yes">View Subkeys</property>
 			  <property name="label" translatable="yes">Sub_keys</property>
@@ -246,7 +246,7 @@
 			  <accelerator key="F1" modifiers="0" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image451">
+			    <widget class="GtkImage" id="image459">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-help</property>
 			      <property name="icon_size">1</property>
