@@ -1,3 +1,8 @@
+2003-02-09  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* seahorse-key-properties: View->Subkeys not visible if there are none
+	* seahorse-passphrase: Bug fix
+
 2003-02-08  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* pixmaps/Makefile.am: Only install pixmaps to $(data_dir)/pixmaps
